# kassadin

./: .gitignore  Cargo.toml  Readme.md
crates/kassaclient/: Cargo.toml
crates/kassaclient/src/: lcu.rs  lib.rs  socket.rs
crates/kassafiles/: Cargo.toml
crates/kassapi/: Cargo.toml
crates/kassapi/src/: api.rs  lib.rs
crates/kassaroutes/: Cargo.toml
crates/kassaroutes/src/: api.rs  lcu.rs  lib.rs
crates/kassatypes/: Cargo.toml
crates/kassatypes/src/: api.rs  champions.rs  lcu.rs  lib.rs  queue.rs  rank.rs  region.rs  socket.rs
crates/kassautils/: Cargo.toml
scripts/: champions.nim  test.rs
src/: client.rs  lib.rs
