[package]
name = "kassadin"
version = "0.1.0"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/kassatypes",
    "crates/kassaroutes",
    "crates/kassapi",
    "crates/kassaclient",
    "crates/kassafiles"
]

[dependencies]
bevy = "0.5.0"

kassaclient = { version = "0.1", path = "crates/kassaclient" }
kassatypes = { version = "0.1", path = "crates/kassatypes" }
kassaroutes = { version = "0.1", path = "crates/kassaroutes" }
kassapi = { version = "0.1", path = "crates/kassapi" }