[package]
name = "kassadin"
version = "0.1.0"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"
description = "A library to work with the LCU and the Riot API"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["api", "lcu"]
api = ["kassaroutes/api"]
lcu = ["kassaroutes/lcu"]

[workspace]
members = [
    "crates/kassatypes",
    "crates/kassaroutes",
    "crates/kassapi",
    "crates/kassaclient",
    "crates/kassafiles",
    "crates/kassautils"
]

[dependencies]
kassaclient = { version = "0.1", path = "crates/kassaclient" }
kassatypes = { version = "0.1", path = "crates/kassatypes" }
kassaroutes = { version = "0.1", path = "crates/kassaroutes" }
kassapi = { version = "0.1", path = "crates/kassapi" }