[package]
name = "kassaclient"
version = "0.1.0"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde               = { version = "1.0.125", features = ["derive"] }
reqwest             = {version = "0.11.3", features = ["json"] }
tokio               = { version = "1.5", features = [ "rt-multi-thread", "macros", "fs" ] }
hyper               = { version = "0.14", features = [ "client", "http1" ] }
serde_json          = "1.0.64"
sysinfo             = "0.17.3"
anyhow              = "1.0.40"
log                 = "0.4.14"
base64              = "0.13.0"
native-tls          = "0.2.1"
websocket           = { version = "0.26.2", features = ["native-tls"] }

kassatypes          = { version = "0.1", path = "../kassatypes", features = ["serde", "lcu"] }
kassaroutes         = { version = "0.1", path = "../kassaroutes", features = ["lcu"] }

[dev-dependencies]
tokio-test = "0.4.1"
env_logger = "0.8.3"