[package]
name = "kassapi"
version = "0.1.0"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.3", features = ["json"] }
anyhow = "1.0.40"
serde_json = "1.0.64"
serde = { version = "1.0.125", features = ["derive"] }

kassatypes = { version = "0", path = "../kassatypes", features = ["serde"] }
kassaroutes = { version = "0", path = "../kassaroutes" }