[package]
name = "kassapi"
version = "0.1.0"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"
description = "Riot API Mappings for the Kassadin Project"
license = "Apache-2.0"

[dependencies]
reqwest = {version = "0.11.3", features = ["json"] }
anyhow = "1.0.40"
serde_json = "1.0.64"
serde = { version = "1.0.125", features = ["derive"] }
log = "0.4.14"

kassatypes = { version = "0.1", path = "../kassatypes", features = ["serde"] }
kassaroutes = { version = "0.1", path = "../kassaroutes", features = ["api"] }

[dev-dependencies]
tokio-test = "0.4.1"
env_logger = "0.8.3"