[package]
name = "kassatypes"
version = "0.1.0"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"

[lib]
name = "kassatypes"
path = "src/lib.rs"

[features]
lcu = []

[dependencies]
strum = "0.20.0"
strum_macros = "0.20.1"
serde = { version = "1.0.125", features = ["derive"], optional = true }